Code: Train the CWoLa on the only augmented samples

--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -1602,6 +1602,157 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Only $\\phi$ shifting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_5_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_only_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, only phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_10_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 10\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_only_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, only phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_05.json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_15_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 15\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_only_phi_aug_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = [f'../Sample/data/quark_jet_2_cut/phi_shifting/40x40/{n:02}/' for n in range(1, 1 + aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_only_phi_aug_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, only phi shifting: +{aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
