--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -1345,6 +1345,44 @@
     "        cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "        print(cmd)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Without pre-process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/quark_jet_2_cut/VBF_in_SR.h5 data/quark_jet_2_cut/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/VBF_in_BR.h5 data/quark_jet_2_cut/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/GGF_in_SR.h5 data/quark_jet_2_cut/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/GGF_in_BR.h5 data/quark_jet_2_cut/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/quark_jet_2_cut')\n",
+    "npy_dir = Path(f'./data/quark_jet_2_cut/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
   }
  ],
  "metadata": {
