Code: Train CNN without the photon features

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1127,6 +1127,221 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove photon informaiton: $\\eta-\\phi$ smearing: +5, +10, +15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-05-23' and time < '2025-05-24'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon\n",
+      "ACC: 0.633 ± 0.005\n",
+      "AUC: 0.664 ± 0.008\n",
+      "True ACC and AUC\n",
+      "ACC: 0.690 ± 0.005\n",
+      "AUC: 0.750 ± 0.008\n",
+      "$0.633 \\pm 0.005$ & $0.664 \\pm 0.008$ & $0.690 \\pm 0.005$ & $0.750 \\pm 0.008$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +5\n",
+      "ACC: 0.644 ± 0.004\n",
+      "AUC: 0.687 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.693 ± 0.007\n",
+      "AUC: 0.746 ± 0.006\n",
+      "$0.644 \\pm 0.004$ & $0.687 \\pm 0.005$ & $0.693 \\pm 0.007$ & $0.746 \\pm 0.006$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +10\n",
+      "ACC: 0.645 ± 0.004\n",
+      "AUC: 0.689 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.697 ± 0.009\n",
+      "AUC: 0.751 ± 0.011\n",
+      "$0.645 \\pm 0.004$ & $0.689 \\pm 0.005$ & $0.697 \\pm 0.009$ & $0.751 \\pm 0.011$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +15\n",
+      "ACC: 0.645 ± 0.004\n",
+      "AUC: 0.689 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.698 ± 0.009\n",
+      "AUC: 0.753 ± 0.010\n",
+      "$0.645 \\pm 0.004$ & $0.689 \\pm 0.005$ & $0.698 \\pm 0.009$ & $0.753 \\pm 0.010$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +10'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon, phi shifting: +15'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel\n",
+      "ACC: 0.621 ± 0.005\n",
+      "AUC: 0.640 ± 0.008\n",
+      "True ACC and AUC\n",
+      "ACC: 0.661 ± 0.007\n",
+      "AUC: 0.715 ± 0.010\n",
+      "$0.621 \\pm 0.005$ & $0.640 \\pm 0.008$ & $0.661 \\pm 0.007$ & $0.715 \\pm 0.010$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +5\n",
+      "ACC: 0.636 ± 0.004\n",
+      "AUC: 0.673 ± 0.006\n",
+      "True ACC and AUC\n",
+      "ACC: 0.673 ± 0.009\n",
+      "AUC: 0.727 ± 0.011\n",
+      "$0.636 \\pm 0.004$ & $0.673 \\pm 0.006$ & $0.673 \\pm 0.009$ & $0.727 \\pm 0.011$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +10\n",
+      "ACC: 0.639 ± 0.004\n",
+      "AUC: 0.677 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.677 ± 0.007\n",
+      "AUC: 0.728 ± 0.010\n",
+      "$0.639 \\pm 0.004$ & $0.677 \\pm 0.005$ & $0.677 \\pm 0.007$ & $0.728 \\pm 0.010$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +15\n",
+      "ACC: 0.640 ± 0.005\n",
+      "AUC: 0.679 ± 0.007\n",
+      "True ACC and AUC\n",
+      "ACC: 0.678 ± 0.007\n",
+      "AUC: 0.731 ± 0.010\n",
+      "$0.640 \\pm 0.005$ & $0.679 \\pm 0.007$ & $0.678 \\pm 0.007$ & $0.731 \\pm 0.010$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +10'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon channel, phi shifting: +15'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-05-26' and time < '2025-05-27'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3\n",
+      "ACC: 0.629 ± 0.004\n",
+      "AUC: 0.653 ± 0.006\n",
+      "True ACC and AUC\n",
+      "ACC: 0.670 ± 0.008\n",
+      "AUC: 0.726 ± 0.009\n",
+      "$0.629 \\pm 0.004$ & $0.653 \\pm 0.006$ & $0.670 \\pm 0.008$ & $0.726 \\pm 0.009$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +5\n",
+      "ACC: 0.642 ± 0.005\n",
+      "AUC: 0.682 ± 0.008\n",
+      "True ACC and AUC\n",
+      "ACC: 0.690 ± 0.010\n",
+      "AUC: 0.742 ± 0.011\n",
+      "$0.642 \\pm 0.005$ & $0.682 \\pm 0.008$ & $0.690 \\pm 0.010$ & $0.742 \\pm 0.011$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +10\n",
+      "ACC: 0.644 ± 0.003\n",
+      "AUC: 0.686 ± 0.004\n",
+      "True ACC and AUC\n",
+      "ACC: 0.692 ± 0.006\n",
+      "AUC: 0.746 ± 0.008\n",
+      "$0.644 \\pm 0.003$ & $0.686 \\pm 0.004$ & $0.692 \\pm 0.006$ & $0.746 \\pm 0.008$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +15\n",
+      "ACC: 0.645 ± 0.005\n",
+      "AUC: 0.687 ± 0.007\n",
+      "True ACC and AUC\n",
+      "ACC: 0.690 ± 0.007\n",
+      "AUC: 0.745 ± 0.007\n",
+      "$0.645 \\pm 0.005$ & $0.687 \\pm 0.007$ & $0.690 \\pm 0.007$ & $0.745 \\pm 0.007$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +5'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +10'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, remove photon: case 3, phi shifting: +15'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
